--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,7 +22,9 @@
     "dev": "echo \"'pnpm dev [command]' has been removed. Use 'pnpm vercel [command]' instead.\" && exit 1",
     "vercel": "pnpm build && node ./dist/vc.js",
     "vc": "pnpm vercel",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test:evals": "tsx evals/run.ts",
+    "test:evals:dry": "tsx evals/run.ts --dry"
   },
   "bin": {
     "vc": "./dist/vc.js",
@@ -191,6 +193,8 @@
     "utility-types": "2.1.0",
     "vite": "^5.1.6",
     "vitest": "^2.1.3",
+    "@vercel/agent-eval": "^0.7.1",
+    "tsx": "^4.20.4",
     "which": "3.0.0",
     "write-json-file": "2.2.0",
     "xdg-app-paths": "5.1.0",
